- Refactored the XMLRPCConnectionService. - Extracted the Homegear and RPCController as separate injectable singleton services from the XMLRPCConnectionService. They are now added to the IServiceCollection through the IServiceCollectionXmlRpcHomegearServiceExtension class. - Added the IDevicesService and its XMLRPC implementation - Added the ILightSwitchesService and its XMLRPC implementation - Added the DevicesController and /devices api - Added the LightSwitchesController and the /lightswitches api

--- a/src/HomegearXMLRPCService/project.json
+++ b/src/HomegearXMLRPCService/project.json
@@ -16,7 +16,7 @@
     },
     "dependencies": {
         "HomegearLib": "1.0.0",
-        "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
-        "Microsoft.Extensions.Options": "1.0.0"
+        "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
+        "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0"
     }
 }
