--- a/src/Abstractions/project.json
+++ b/src/Abstractions/project.json
@@ -1,6 +1,9 @@
-﻿{
+{
   "version": "1.0.0-*",
-  "frameworks": {
-    "net461": {}
-  }
+    "dependencies": {
+        "System.ComponentModel.Annotations": "4.1.0"
+    },
+    "frameworks": {
+        "net461": {}
+    }
 }
