--- a/src/Abstractions/project.json
+++ b/src/Abstractions/project.json
@@ -1,7 +1,8 @@
 {
   "version": "1.0.0-*",
     "dependencies": {
-        "System.ComponentModel.Annotations": "4.3.0"
+        "System.ComponentModel.Annotations": "4.3.0",
+        "HomegearLib": "1.0.0"
     },
     "frameworks": {
         "net461": {}
