--- a/src/DB/project.json
+++ b/src/DB/project.json
@@ -1,18 +1,76 @@
+﻿/*
 {
-  "version": "1.0.0-*",
-
     "dependencies": {
+        "Microsoft.NETCore.App": {
+            "version": "1.1.0",
+            "type": "platform"
+        },
+        "Microsoft.EntityFrameworkCore.Tools": "1.1.0-preview4-final",
         "Microsoft.EntityFrameworkCore.Sqlite": "1.1.0",
-        "NETStandard.Library": "1.6.1"
+        "Microsoft.AspNetCore.Diagnostics": "1.0.0",
+        "Microsoft.EntityFrameworkCore.Design": {
+            "version": "1.1.0",
+            "type": "build"
+        },
+        "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
+        "Microsoft.AspNetCore.Server.Kestrel": "1.0.0",
+        "Microsoft.Extensions.Logging.Console": "1.0.0"
+    },
+
+    "tools": {
+        "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
+        "Microsoft.EntityFrameworkCore.Tools": "1.1.0-preview4-final",
+        "Microsoft.EntityFrameworkCore.Tools.DotNet": "1.1.0-preview4"
     },
 
   "frameworks": {
-    "net461": {
-        "dependencies": {
-            "Abstractions": {
-                "target": "project"
+    "netcoreapp1.1": {
+      "imports": [
+        "dotnet5.6",
+        "portable-net45+win8"
+      ]
+    }
+  },
+
+  "buildOptions": {
+    "emitEntryPoint": true,
+    "preserveCompilationContext": true
+  },
+
+  "runtimeOptions": {
+    "configProperties": {
+      "System.GC.Server": true
+    }
+  },
+
+  "publishOptions": {
+    "include": [
+      "wwwroot",
+      "web.config"
+    ]
+  },
+
+  "scripts": {
+    "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
+  }
+}
+*/
+{
+    "title": "HomegearUI DB",
+    "copyright": "2016",
+    "description": "DB Service for HomegearUI",
+    "language": "en",
+    "version": "1.0.0-*",
+    "frameworks": {
+        "net461": {
+            "dependencies": {
+                "Abstractions": {
+                    "target": "project"
+                }
             }
         }
+    },
+    "dependencies": {
+        "Microsoft.EntityFrameworkCore.Sqlite": "1.1.0"
     }
-  }
 }
