--- a/src/HomegearXMLRPCService/project.json
+++ b/src/HomegearXMLRPCService/project.json
@@ -14,8 +14,9 @@
         }
     },
     "dependencies": {
+        "DB": "1.0.0",
         "HomegearLib": "1.0.0",
-        "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
-        "Microsoft.Extensions.DependencyInjection.Abstractions": "1.1.0"
+        "Microsoft.Extensions.DependencyInjection.Abstractions": "1.1.0",
+        "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0"
     }
 }
