--- a/src/HomegearUI/project.json
+++ b/src/HomegearUI/project.json
@@ -9,7 +9,9 @@
         "Microsoft.AspNetCore.Server.Kestrel": "1.1.0",
         "Microsoft.AspNetCore.StaticFiles": "1.1.0",
         "Microsoft.Extensions.Configuration.Json": "1.1.0",
-        "Microsoft.Extensions.Logging.Console": "1.1.0"
+        "Microsoft.Extensions.Logging.Console": "1.1.0",
+        "NLog.Extensions.Logging": "1.0.0-*",
+        "NLog.Web.AspNetCore": "4.3.0"
     },
 
     "tools": {
