--- a/src/HomegearUI/nlog.config
+++ b/src/HomegearUI/nlog.config
@@ -12,24 +12,27 @@
 
   <!-- define various log targets -->
   <targets>
-    <!-- write logs to file -->
-    <target xsi:type="File" name="allfile" fileName="c:\temp\nlog-all-${shortdate}.log"
+    <!-- General logging, everything is dumped in here -->
+    <target xsi:type="File" name="GeneralLogs" fileName="c:\temp\GeneralLogs-${shortdate}.log"
                 layout="${longdate}|${event-properties:item=EventId.Id}|${logger}|${uppercase:${level}}|${message} ${exception}" />
 
-    <!-- only own logs. Uses some ASP.NET core renderers -->
-    <target xsi:type="File" name="ownFile-web" fileName="c:\temp\nlog-own-${shortdate}.log"
-            layout="${longdate}|${event-properties:item=EventId.Id}|${logger}|${uppercase:${level}}|  ${message} ${exception}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
-
+    <!-- HomegearXMLRPCService logging target -->
+    <target xsi:type="File" name="HomegearXMLRPCService" fileName="c:\temp\HomegearXMLRPCService-${shortdate}.log"
+            layout="${longdate}|${uppercase:${level}}|  ${message} ${exception}" />
 
     <target xsi:type="Null" name="blackhole" />
   </targets>
 
   <rules>
     <!--All logs, including from Microsoft-->
-    <logger name="*" minlevel="Trace" writeTo="allfile" />
+    <!--<logger name="*" minlevel="Trace" writeTo="allfile" />-->
 
-    <!--Skip Microsoft logs and so log only own logs-->
+    <!--Dump all the Microsoft logs into the blackhole, we don't need them for now-->
     <logger name="Microsoft.*" minlevel="Trace" writeTo="blackhole" final="true" />
-    <logger name="*" minlevel="Trace" writeTo="ownFile-web" />
+    
+    <!-- Gathers all the logs in the application and dumps them to the GeneralLogs target -->
+    <logger name="*" minlevel="Trace" writeTo="GeneralLogs" />
+    <!--Gathers logs about the HomegearXMLRPCService-->
+    <logger name="HomegearXMLRPCService.*" minlevel="Trace" writeTo="HomegearXMLRPCService" />
   </rules>
 </nlog>
