Major refactorings. Added the Wallsocket plug sensor.

--- a/src/Abstractions/project.json
+++ b/src/Abstractions/project.json
@@ -1,9 +1,8 @@
 {
   "version": "1.0.0-*",
-    "dependencies": {
-        "System.ComponentModel.Annotations": "4.3.0",
-        "HomegearLib": "1.0.0"
-    },
+  "dependencies": {
+    "System.ComponentModel.Annotations": "4.3.0"
+  },
     "frameworks": {
         "net461": {}
     }
