--- a/src/HomegearUI/appsettings.json
+++ b/src/HomegearUI/appsettings.json
@@ -1,11 +1,19 @@
 ﻿{
     "Homegear": {
-        "Connection": {
-            "IP": "192.168.178.34",
-            "Port": 2001,
-            "EventListenerHostname": "alvin",
-            "EventListenerIP": "0.0.0.0",
-            "EventListenerPort": 4002
+      "Connection": {
+        "IP": "192.168.178.34",
+        "Port": 2001,
+        "EventListenerHostname": "alvin",
+        "EventListenerIP": "0.0.0.0",
+        "EventListenerPort": 4002
+      },
+      "Devices": {
+        "LightSwitch": {
+          // The number of seconds between log entries for a lightwitch state change.
+          // This prevents too many entries to be created when the lightswitch is changing the state very fast.
+          // As a rule of thumb, do not put this value too low.
+          "NoLogUpdateInterval": 30
         }
+      }
     }
 }
